--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -1,26 +1,24 @@
 <template args="model">
     <pop-up skip="true"></pop-up>
     <div class="page-intro">
-        <div class="text-content subhead">
-            <h1>{model.headline}</h1>
-            <p>{model.topParagraph}
-                <if condition="model.topLinkUrl">
+        <div class="subhead">
+            <div class="{`text-content ${model.studentImage ? 'left-aligned' : 'centered'}`}">
+                <h1>{model.headline}</h1>
+                <p if="model.topLinkUrl">
                     {' '}<a href="{model.topLinkUrl}">{model.topLinkText}</a>
-                </if>
-            </p>
+                </p>
+                <p if="model.adoptionQuestion">{model.adoptionQuestion}</p>
+                <a href="{model.adoptionUrl}" title="{model.adoptionLinkText}" class="cta btn">{model.adoptionLinkText}</a>
+                <a if="model.subjectLinkText"
+                    href="/subjects" title="{model.subjectLinkText}" class="go-back">{model.subjectLinkText}</a>
+            </div>
+            <img if="model.studentImage" src="{`/images/components/${model.studentImage}`}" />
         </div>
     </div>
 
     <div class="wrapper">
-        <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
         <savings-calculator class="boxed" skip="true"></savings-calculator>
         <div class="text-content labeled-inputs row book-info">
-            <div class="text-content add-another">
-                <h2 if="model.adoptionQuestion">{model.adoptionQuestion}</h2>
-                <a href="{model.adoptionUrl}" title="{model.adoptionLinkText}" class="btn">{model.adoptionLinkText}</a>
-                <a if="model.subjectLinkText"
-                    href="/subjects" title="{model.subjectLinkText}" class="btn btn-secondary">{model.subjectLinkText}</a>
-            </div>
         </div>
     </div>
 </template>
