centered header text

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -239,6 +239,7 @@ sup {
     font-weight: normal;
     max-width: $boxed-width;
     padding: 8rem 1.5rem;
+    text-align: center;
     width: 100%;
 
     h1 {
