--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -8,7 +8,7 @@
                     {' '}<a href="{model.topLinkUrl}">{model.topLinkText}</a>
                 </p>
                 <p if="model.adoptionQuestion">{model.adoptionQuestion}</p>
-                <a href="{model.adoptionUrl}" title="{model.adoptionLinkText}" class="cta btn">{model.adoptionLinkText}</a>
+                <a if="model.adoptionUrl" href="{model.adoptionUrl}" title="{model.adoptionLinkText}" class="cta btn">{model.adoptionLinkText}</a>
                 <a if="model.subjectLinkText"
                     href="/subjects" title="{model.subjectLinkText}" class="go-back">{model.subjectLinkText}</a>
             </div>
@@ -18,6 +18,7 @@
 
     <div class="wrapper">
         <savings-calculator class="boxed" skip="true"></savings-calculator>
+        <detail-block skip="true"></detail-block>
         <div class="text-content labeled-inputs row book-info">
         </div>
     </div>
