--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -25,7 +25,7 @@
                 </p>
                 <p if="model.amazon.link">
                     <a href="{model.amazon.link}" class="btn">Individual Orders</a>
-                    ${model.amazon.price} from seller \"OpenStax\" on Amazon
+                    {model.amazon.price} from seller \"OpenStax\" on Amazon
                 </p>
                 <div class="remover"><i class="fa fa-times" aria-hidden="true"></i></div>
             </div>
