--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -1,6 +1,7 @@
 <template args="model">
     <form class="body-block" method="post" action="{model.postEndpoint}"
      enctype="multipart/form-data">
+        <input type="hidden" name="submitter_email_address" value="rej2@rice.edu" />
         <div class="question">Wrong subject? Select a different subject.</div>
         <div skip="true"></div>
         <select name="book">
