rewrite banner mixin to include custom url field

--- a/src/app/pages/home/banners/banner.html
+++ b/src/app/pages/home/banners/banner.html
@@ -14,7 +14,7 @@
                 <span class="quote">{model.quote}</span>
             </div>
             <div class="{`subject-links fly${model.fly}`}">
-                <a class="btn btn-large {model.buttonSpec1} explore-subject" href="/details/books/{model.subject}">
+                <a class="btn btn-large {model.buttonSpec1} explore-subject" href="{model.subjectURL}">
                     Explore {model.subjectTitle}
                 </a>
                 <a class="btn btn-large {model.buttonSpec2} explore-all" href="/subjects">
