--- a/src/app/pages/details/resource/resource.html
+++ b/src/app/pages/details/resource/resource.html
@@ -9,6 +9,7 @@
         <else>
             <a class="download-link go-to" data-local="{model.dataLocal}" href="{model.linkUrl}">{model.link_text}</a>
         </if>
-        <i if="model.showLock" class="locked-state fa {model.showLock}"></i>
+        <i if="model.showLock" title="{model.lockToolTip}"
+         class="locked-state fa {model.showLock}"></i>
     </span>
 </template>
