--- a/src/app/pages/errata/detail/detail.html
+++ b/src/app/pages/errata/detail/detail.html
@@ -16,7 +16,7 @@
     </div>
     <div class="note body-block">
         You can check the status of all errata submissions on the
-        <a href="/errata?book={encodeURIComponent(model.bookTitle)}">
+        <a href="/errata/?book={encodeURIComponent(model.detail.bookTitle)}">
             <span data-html="detail.bookTitle" skip="true"></span> Errata Page
         </a>.
     </div>
