Set default link styling
Set link color to cyan at top level
Remove redundant styling

--- a/src/app/pages/contact/contact.scss
+++ b/src/app/pages/contact/contact.scss
@@ -54,7 +54,12 @@
                         margin-top: 2.5rem;
                     }
                 }
+            }
 
+            a {
+                font-size: 1.4rem;
+                font-weight: bold;
+                text-transform: uppercase;
             }
         }
     }
